@@ -1,5 +1,9 @@
 2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* include/avr/io.h: add documentation.
+
+2002-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* doc/api/Makefile.am: Black magic to split a long table.
 	* doc/api/interrupts.dox: minor changes and additions.
 
